added monitoring for input/keyboard/at, hope this fix bug #155

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@16468 a95241bf-73f2-0310-859d-f6bbb57e9c96